# multimodal-agentic-rag

./: Dockerfile  README.md  docker-compose.yml  multimodal_rag_app.py  pyproject.toml  requirements.txt
agents/: orchestrator.py
api/: __init__.py
core/: llm_providers.py  logging.py  vector_store.py
multimodal/: __init__.py  processors.py
src/: __init__.py
src/agents/: __init__.py
src/api/: main.py
src/core/: __init__.py  config.py
src/multimodal/: embeddings.py
tests/: test_integration.py
ui/: __init__.py
